# xts101

./: .gitignore  README.md  xts101.cabal
.stack-work/install/x86_64-linux/lts-12.11/8.4.3/flag-cache/: network-2.6.3.6-2g6VId0Xlc85XRtUcfQj0T  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  syb-0.7-2jW43lwzJV5e7EQvU8PxV
.stack-work/install/x86_64-linux/lts-12.7/8.4.3/flag-cache/: intero-0.1.32
src/Data/: TS.hs  Utils.hs  XTS.hs
